# openkit

./: .gitignore  .npmignore  .releaserc.json  AGENTS.md  CHANGELOG.md  LICENSE  PACKAGE_STATUS.md  PUBLISH.md  README.md  README.pt-BR.md  index.js  opencode.json  package-lock.json  package.json
.opencode/: ARCHITECTURE.md
.opencode/commands/: README.md  analyze.md  brainstorm.md  checklist.md  clarify.md  context.md  create.md  debug.md  deploy.md  doc.md  engineer.md  impl.md  plan.md  preview.md  (+5 more)
blueprints/fullstack/backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
blueprints/fullstack/backend/app/: celery_app.py  database.py  main.py  settings.py
blueprints/fullstack/backend/app/api/: README.md
blueprints/fullstack/backend/app/core/: README.md
blueprints/fullstack/backend/app/models/: README.md  __init__.py  item.py
blueprints/fullstack/backend/app/routers/: items.py
blueprints/fullstack/backend/app/schemas/: README.md  item.py
blueprints/fullstack/backend/app/services/: item_service.py
blueprints/fullstack/backend/app/tasks/: README.md
blueprints/fullstack/backend/migrations/: env.py
blueprints/fullstack/backend/migrations/versions/: 0001_initial_sample_data.py
docs/: ACTION_ITEMS.md  AGENTS.md  ARCHITECTURE.md  BLUEPRINTS.md  COMMANDS.md  CONTEXT.md  CONTRIBUTING.md  EXTENDING.md  FAQ.md  INSTALLATION_PREVENTION.md  QUALITY_GATES.md  README.md  SECURITY.md  SKILLS.md  WORKFLOW.md
scripts/: prepare.js  update-version.js
test/: paths.test.js  symlink-safety.test.js  upgrade-planner-applier.test.js  upgrade-planner.test.js
(+142 files in other folders)
